Created builder command

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ self = "*"
 webdriver-manager = "*"
 pandas = "*"
 jupyter = "*"
+deap = "*"
+networkx = "*"
+product = "*"
+numpy = "*"
 
 [dev-packages]
 
